# cudnn.torch

./: BGRU.lua  BLSTM.lua  BatchNormalization.lua  CMakeLists.txt  ClippedReLU.lua  Dropout.lua  GRU.lua  LICENSE  LSTM.lua  LogSoftMax.lua  Pointwise.lua  Pooling.lua  Pooling3D.lua  README.md  RNN.lua  RNNReLU.lua  RNNTanh.lua  ReLU.lua  ReLUInPlace.lua  Sigmoid.lua  SoftMax.lua  SpatialAveragePooling.lua  SpatialBatchNormalization.lua  SpatialConvolution.lua  SpatialCrossEntropyCriterion.lua  SpatialCrossMapLRN.lua  SpatialDilatedConvolution.lua  SpatialDivisiveNormalization.lua  SpatialFullConvolution.lua  SpatialLogSoftMax.lua  SpatialMaxPooling.lua  SpatialSoftMax.lua  Tanh.lua  TemporalConvolution.lua  VolumetricAveragePooling.lua  VolumetricBatchNormalization.lua  VolumetricConvolution.lua  VolumetricCrossEntropyCriterion.lua  VolumetricDilatedConvolution.lua  VolumetricFullConvolution.lua  (+13 more)
cmake/: FindCUDNN.cmake
test/: bench_groups.lua  benchmark.lua  bntest.lua  bug.lua  clone.lua  modelTemp.t7  test.lua  test_1x1conv.lua  test_fp16.lua  test_groups.lua  test_rnn.lua  test_spatialFullConv.lua
